# M7-project

./: .gitignore  Procfile  README.md  manage.py  out_schedule.csv  out_soft_violations.csv  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: pre-commit.yml
src/: main.py
src/Classes/: Course.py  Teachers.py  University.py
src/wttr_cli/: cli.py  core.py
src/wttr_cli.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_core.py
university_scheduler/: README.md  db.sqlite3  manage.py  requirements.txt
university_scheduler/apps/core/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
university_scheduler/apps/core/domain/: course.py  scheduler.py  teacher.py  university_data.py
university_scheduler/apps/core/migrations/: 0001_initial.py
university_scheduler/apps/core/services/: csv_bootstrap_service.py  external_scheduler_service.py  scheduler_service.py
university_scheduler/apps/core/templates/core/: schedule.html
university_scheduler/university_cirriculum_scheduler/: README.md  data_loaders.py  main.py
university_scheduler/university_cirriculum_scheduler/classes/: scheduler.py  teacher.py
university_scheduler/university_scheduler/: asgi.py  settings.py  urls.py  wsgi.py
