[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wttr-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[project.scripts]
weather = "wttr_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
